# christmas-ornament-pcb

./: README.md
firmware/: .gitignore  Makefile  Pipfile  README.md  ble.py  code.py  config.py  config.txt  entrypoint.py  platform.py  requirements.txt
firmware/driver/: bluefruitspi.py
firmware/task/: __init__.py  battery_monitor.py  heap_monitor.py  led.py  light_sensing.py  neopixel.py  util.py  watchdog.py
host/: .gitignore  Cargo.toml  README.md
host/src/: ble.rs  main.rs
host/src/attrs/: mod.rs  scaledqty.rs  uintqty.rs
kicad/: README.md
kicad-lib/: CNC_3220-10-0300-00.kicad_mod  Lab_4.kicad_sym  Personal_Symbols_Library.kicad_sym
kicad/ADXL 343 Adapter/: .gitignore  ADXL343 Adapter.kicad_pcb  ADXL343 Adapter.kicad_prl  ADXL343 Adapter.kicad_pro  ADXL343 Adapter.kicad_sch  ADXL343BCCZ-RL7.kicad_sym  PQFN80P300X500X100-14N.kicad_mod  Project_Symbols.kicad_sym
kicad/ADXL 343 Adapter/Project_Footprints.pretty/: PQFN80P300X500X100-14N.kicad_mod
kicad/Project/rev1/: .gitignore  Project.kicad_pcb  Project.kicad_prl  Project.kicad_pro  Project.kicad_sch  Project_MCU.kicad_sch  Project_Symbols.kicad_sym  Project_power.kicad_sch
kicad/Project/rev1/Components/: GCT_MEM2075-00-140-01-A.kicad_mod  JST_S2B-PH-SM4-TB.kicad_mod  TP_5011.kicad_mod  VEML7700-TR.step
kicad/Project/rev1/Project_Footprints.pretty/: R_Array_4x1206.kicad_mod
kicad/Project/rev2/: Project.kicad_pcb  Project.kicad_prl  Project.kicad_sch  Project_Symbols.kicad_sym  Project_power.kicad_sch  fp-lib-table
kicad/Project/rev2/Components/: AMPHENOL_10103594-0001LF.kicad_mod  (+4 more)
(+4 files in other folders)
