[package]
name = "christmas-ornament-host"
version = "0.1.0"
authors = ["Ammar Ratnani <ammrat13@gmail.com>"]
edition = "2021"
rust-version = "1.82"
description = "Host code for interacting with the christmas ornament"
repository = "https://github.com/ammrat13/christmas-ornament-pcb"
license = "MIT"

[dependencies]
anyhow = "1.0.93"
argparse = "0.2.2"
axum = { version = "0.7.9", features = ["macros"] }
btleplug = "0.11.6"
env_logger = "0.11.5"
log = "0.4.22"
phf = "0.11.2"
serde = { version = "1.0.215", features = ["derive"] }
static_assertions = "1.1.0"
tokio = { version = "1.41.1", features = ["rt-multi-thread", "macros"] }
uuid = "1.11.0"
